syntax = "proto3";
/* Following chromium style (e.g. sync_pb) is the usage for the sync protobuf
*/
package publishers_pb;

message ChannelResponse {
  message SiteBannerDetails {
    string title = 1;
    string description = 2;
    string background_url = 3;
    string logo_url = 4;
    repeated double donation_amounts = 5;

    message SocialLinks {
      string youtube = 1;
      string twitter = 2;
      string twitch = 3;
    }
    SocialLinks social_links = 6;
  }

  message Wallet {
    message UpholdWallet {
      string address = 1;

      enum UpholdWalletState {
        UPHOLD_ACCOUNT_NO_KYC = 0;
        UPHOLD_ACCOUNT_KYC = 1;
      }
      UpholdWalletState wallet_state = 2;
    }

    message PaypalWallet {
      enum PaypalWalletState {
        PAYPAL_ACCOUNT_NO_KYC = 0;
        PAYPAL_ACCOUNT_KYC = 1;
      }
      PaypalWalletState wallet_state = 1;
    }

    oneof provider {
      UpholdWallet uphold_wallet = 1;
      PaypalWallet paypal_wallet = 2;
    }
  }

  string channel_identifier = 1;
  repeated Wallet wallets = 2;
  SiteBannerDetails site_banner_details = 3;
}

message ChannelResponseList {
  repeated ChannelResponse channel_responses = 1;
}
